fixes the http step will failure when url contains whitespace